Write & Test Baord
- Update Ship to apply a unique ID to each ship
- create Board.#grid which is an object which contains shipId
- write Board helper functions:
  - setter and getters for #ship, #grid and cells
  - allShipsCells (needs refactor)
  - getCellRow, getCellCol
  - inGrid (needs writing)
- write & test placeShip method

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "webpack --mode=development",
     "serve": "webpack serve",
     "watch": "webpack --watch",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --silent=false"
   },
   "devDependencies": {
     "css-loader": "^7.1.2",
