--- a/babel.config.json
+++ b/babel.config.json
@@ -1,10 +1,11 @@
 {
-  "plugins": ["@babel/syntax-dynamic-import"],
+  "plugins": ["@babel/plugin-syntax-dynamic-import"],
   "presets": [
     [
       "@babel/preset-env",
       {
-        "modules": false
+        "targets": { "node": "current" },
+        "modules": "commonjs"
       }
     ]
   ]
