--- a/package.json
+++ b/package.json
@@ -8,17 +8,25 @@
     "build:dev": "webpack --mode=development",
     "serve": "webpack serve",
     "watch": "webpack --watch",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --silent=false"
+    "test": "jest --silent=false"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.26.9",
+    "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
-    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-html-loader": "^1.0.0",
     "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
+  },
+  "dependencies": {
+    "html-loader": "^5.1.0"
   }
 }
