--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-html-loader": "^1.0.0",
     "mini-css-extract-plugin": "^2.9.2",
+    "serve": "^14.2.4",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
